# cppmiltech

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  apt-packages.in  devcontainer.json
.github/workflows/: build.yml
demos/lesson_2_4/remote_debug/: CMakeLists.txt  README.md
homework_04/src/: main.cpp
homework_05/: CMakeLists.txt
homework_05/include/: telemetry.hpp
homework_05/src/: main.cpp  telemetry.cpp
homework_06/: CMakeLists.txt
homework_06/data/: unknown_ammo.txt
homework_06/include/: ballistics.hpp
homework_06/src/: ballistics.cpp  main.cpp
homework_06/tests/: ballistics_tests.cpp
